update tex file

--- a/main.tex
+++ b/main.tex
@@ -524,7 +524,7 @@ In regions with high moisture content, such as tropical rainforests or coastal a
 Lab Assignment-01 \\
 
 \vspace{1cm}
-moisture content leads to cloud formation and increased absorption of longwave radiation, which can result in lower OLR and increased precipitation.
+moisture content leads to cloud formation and increased absorption of outgoing longwave radiation, which can result in lower OLR and increased precipitation.
 
 However, the relationship between OLR and precipitation may be more complex in drier regions. For example, high OLR values may indicate a lack of atmospheric moisture and a lower likelihood of precipitation in some arid or semi-arid regions. In other cases, high OLR values may be associated with the presence of high-altitude clouds, which can trap longwave radiation and contribute to the warming of the atmosphere but may not necessarily result in precipitation.
     
